# WikiDelta

./: README.md  README.zh-CN.md  pyproject.toml
docs/superpowers/plans/: 2026-06-26-wikidelta-optional-snapshot.md  2026-06-26-wikidelta-wd-lifecycle.md
docs/superpowers/specs/: 2026-06-26-wikidelta-optional-snapshot-design.md  2026-06-26-wikidelta-wd-lifecycle-design.md
src/wikidelta/: cli.py  document.py  models.py  repository.py  service.py  sources.py
tests/: test_cli_add.py  test_cli_e2e.py  test_cli_init.py  test_document.py  test_ingest.py  test_lifecycle.py  test_repository.py  test_script_protocol.py  test_sources.py
