[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidelta"
version = "0.1.0"
description = "Lifecycle CLI for .wd llmwiki source files"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.7",
  "pypdf>=4.2",
  "PyYAML>=6.0",
  "requests>=2.32",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
wd = "wikidelta.cli:app"

[project.urls]
Homepage = "https://github.com/jcb850/WikiDelta"
Repository = "https://github.com/jcb850/WikiDelta"
Issues = "https://github.com/jcb850/WikiDelta/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
